# String_Task_Main

./: CMakeLists.txt  README.md  String.cpp  String.h  main.cpp
tests/: test.cpp
